--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -19,7 +19,7 @@
           <ion-text color="danger">Correo requerido</ion-text>
         </div>
         <ion-item>
-          <ion-input class="input-field" formControlName="password" placeholder="Contraseña"></ion-input>
+          <ion-input class="input-field" formControlName="password" placeholder="Contraseña" type="password"></ion-input>
           <ion-icon name="lock-closed-outline"></ion-icon>
         </ion-item>
         <div
@@ -31,7 +31,7 @@
       </div>
       
       <div id="container" class="center-text" justify="center">
-        <p >
+        <p>
           ¿Ya estás registrado?
           <ion-label color="primary" [routerLink]="['/login']">
             Ingresar
@@ -40,10 +40,17 @@
       </div>
     </div>
 
-    <ion-fab horizontal="center">
-      <ion-button class="custom-register-button" (click)="singUp()" [disabled]="!singUpForm.valid">
-        Registrar
-      </ion-button>
-    </ion-fab>
+    <ion-row class="ion-justify-content-center">
+      <ion-col size="auto">
+        <ion-button class="custom-register-button" (click)="singUp()" [disabled]="!singUpForm.valid">
+          Registrar
+        </ion-button>
+      </ion-col>
+      <ion-col size="auto">
+        <ion-button (click)="onGoogleRegister()">
+          Registrar con Google
+        </ion-button>
+      </ion-col>
+    </ion-row>
   </form>
 </ion-content>
