--- a/src/app/pages/blog/blog.page.html
+++ b/src/app/pages/blog/blog.page.html
@@ -4,21 +4,16 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content>
   <ion-list>
     <ion-item *ngFor="let post of posts$ | async">
-      <ion-thumbnail slot="start">
-        <img *ngIf="post.fileType.startsWith('image')" [src]="post.uploadUrl" class="post-image" />
-        <ion-icon *ngIf="post.fileType === 'application/pdf'" name="document-outline"></ion-icon>
-      </ion-thumbnail>
       <ion-label>
-        <h2>{{ post.content }}</h2>
-        <p *ngIf="post.fileType === 'application/pdf'">
-          <a [href]="post.uploadUrl" target="_blank">View PDF</a>
-        </p>
+        <p>{{ post.content }}</p>
+        <img *ngIf="post.fileType.startsWith('image')" [src]="post.uploadUrl" style="max-width: 100%; border-radius: 10px;" />
+        <a *ngIf="post.fileType === 'application/pdf'" [href]="post.uploadUrl" target="_blank">View PDF</a>
       </ion-label>
       <!-- Botón para eliminar el post -->
-      <ion-button color="danger" (click)="deletePost(post.id, post.uploadUrl)">
+      <ion-button color="danger" (click)="deletePost('post', post.id, post.uploadUrl)">
         <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
       </ion-button>
     </ion-item>
@@ -41,7 +36,7 @@
         <ion-icon name="location-outline"></ion-icon> OBTENER LOCACIÓN
       </ion-button>
       <ion-button (click)="addPost()">
-        <ion-icon name="send-outline"></ion-icon> ENVIAR  
+        <ion-icon name="send-outline"></ion-icon> Enviar
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
